--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "preview": "vite preview",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "typecheck": "tsc --noEmit",
+    "serve": "node server/index.js",
     "format": "prettier --write ."
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.22.1",
+    "mongoose": "^7.6.2",
+    "morgan": "^1.10.0",
     "lucide-react": "^0.258.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
