--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.22.1",
     "mongoose": "^7.6.2",
     "morgan": "^1.10.0",
+    "date-fns": "^3.0.0",
     "lucide-react": "^0.258.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
